# BSc_thesis

./: LICENSE  README.md  matcher.py
catkin_ws/src/visual_servo/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/visual_servo/src/controller/: controller.py
catkin_ws/src/visual_servo/src/objectDetector/: objectDetector.py
catkin_ws/src/visual_servo/src/visualServo/: .helpers.py.swp  visualServo.py
code/: requirements-2.txt  requirements-3.txt
code/catkin_ws/src/visual_servo/src/controller/: bot.py  controller.py
code/catkin_ws/src/visual_servo/src/objectDetector/model/: model.ckpt.index  pipeline.config
code/catkin_ws/src/visual_servo/src/visualServo/: helpers.py
code/scripts/: aug.py  commands.txt  kmeans.py  moveFiles.py  renameXml.py  run_eval.py  train_collab.ipynb  trainer.py  validXml.py
controller/: bot.py  controller.py
model/: model.ckpt.index  pipeline.config
objectDetector/: objectDetector.py
objectDetector/annotations/: label_map.pbtxt
objectDetector/model/: model.ckpt.index  pipeline.config
scripts/: aug.py  aug1.py  changePath.py  changePathXml.py  check.py  click.py  copy1.py  dataIndex.py  deleteFiles.py  deleteFiles1.py  f.py  imageSimilarity.py  imageSimilarityFast.py  kmeans.py  learning_rate.py  my_eval.py  renameFiles.py  t.py  t.txt  test.py  tttttt.txt  x.py
visualServo/: helpers.py  visualServo.py
visual_servo/: CMakeLists.txt  package.xml  setup.py
visual_servo/data/: 1.pcd  10.pcd  11.pcd  12.pcd  13.pcd  14.pcd  15.pcd  16.pcd  17.pcd  18.pcd  19.pcd  2.pcd  20.pcd  21.pcd  22.pcd  23.pcd  24.pcd  25.pcd  26.pcd  27.pcd  28.pcd  29.pcd  3.pcd  30.pcd  31.pcd  32.pcd  33.pcd  34.pcd  35.pcd  36.pcd  37.pcd  4.pcd  5.pcd  6.pcd  7.pcd  8.pcd  9.pcd  template.pcd
visual_servo/src/objectDetector/: objectDetector.py
visual_servo/src/visualServo/: check.py  createTemplate.py  exp.py  fix.py  helpers.py  kinectHandler2.py  kinectHandler3.py  kinectHandlerimp.py  notes.txt  pclProcessing.py  points.py  pointstemp.py  requirements.txt  servo_controller.py  temp.py  tempor  tmp.py  tt1.py  visualServo.py  xaa
